<resources>
    <string name="app_name">KniLIM</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">你好，</string>
    <string name="invalid_username">请填写正确的邮箱或手机号</string>
    <string name="invalid_password">密码不能为空</string>
    <string name="kv_username">userName</string>
    <string name="kv_password">password</string>
    <string name="has_local">hasLocal</string>
    <string name="login_failed">登录失败，请重试！</string>

    <!--    MainActivity相关字符串-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dialog">聊天</string>
    <string name="title_friend">好友</string>
    <string name="title_group">群组</string>
    <string name="add_friend">添加好友</string>
    <string name="create_group">创建群组</string>
    <string name="search">搜索</string>
    <string name="about_us">关于我们</string>
    <string name="settings">账号设置</string>
    <string name="notifications">消息通知</string>
    <string name="github">项目地址</string>
    <string name="money">赞赏投币</string>

    <!--    涉及全局的一些字符串-->
    <string name="url">http://im.loheagn.com:8080/</string>
    <string name="database">IM</string>

    <!--    ChatActivity相关字符串-->
    <string name="hint_enter_a_message">请输入……</string>
</resources>
