<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications_black_24dp" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp" />

    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_about_us_black_24dp" />

    <item
        android:id="@+id/github"
        android:title="@string/github"
        android:icon="@drawable/ic_github" />

    <item
        android:id="@+id/money"
        android:title="@string/money"
        android:icon="@drawable/ic_monetization_on_black_24dp" />

</menu>