<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dialog">

    <fragment
        android:id="@+id/navigation_dialog"
        android:name="com.knilim.knilim.ui.dialog.DialogFragment"
        android:label="@string/title_dialog"
        tools:layout="@layout/fragment_dialog" />

    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.knilim.knilim.ui.friend.FriendFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/fragment_friend" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.knilim.knilim.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />
</navigation>
